change contact us & warranty meta info; update mageworx extension.

--- a/app/code/Flurrybox/EnhancedPrivacy/view/frontend/layout/privacy_settings_delete.xml
+++ b/app/code/Flurrybox/EnhancedPrivacy/view/frontend/layout/privacy_settings_delete.xml
@@ -24,7 +24,7 @@
     <body>
         <referenceContainer name="content">
             <block class="Flurrybox\EnhancedPrivacy\Block\Customer\Privacy\Delete" name="privacy_delete"
-                   cacheable="false"/>
+                   cacheable="true"/>
         </referenceContainer>
     </body>
 </page>
