--- a/app/code/Flurrybox/EnhancedPrivacy/view/frontend/layout/privacy_settings_index.xml
+++ b/app/code/Flurrybox/EnhancedPrivacy/view/frontend/layout/privacy_settings_index.xml
@@ -24,7 +24,7 @@
     <body>
         <referenceContainer name="content">
             <block class="Flurrybox\EnhancedPrivacy\Block\Customer\Privacy\Settings" name="privacy_settings"
-                   cacheable="false"/>
+                   cacheable="true"/>
         </referenceContainer>
     </body>
 </page>
