--- a/pub/media/codazon/amp/less/_general.less
+++ b/pub/media/codazon/amp/less/_general.less
@@ -70,7 +70,7 @@ button, a{
 }
 .cdz-block{
     .cdz-block-title{
-        text-transform: none;
+        text-transform: uppercase;
         color: @block_title_text;
     }
 }
