--- a/pub/media/codazon/amp/less/pages/_cms-page-view.less
+++ b/pub/media/codazon/amp/less/pages/_cms-page-view.less
@@ -1,6 +1,6 @@
 .amp-cms-view{
     h2{
-       text-transform: none;
+       text-transform: uppercase; 
     }
     h3{
         color: darken(@block_title_text, 10%);
