--- a/pub/media/codazon/amp/less/pages/_product-view.less
+++ b/pub/media/codazon/amp/less/pages/_product-view.less
@@ -21,7 +21,7 @@
             border: 1px solid @general_border;
             padding: 2px 10px;
             border-radius: 3px;
-            text-transform: none;
+            text-transform: uppercase;
         }
         &.available > span{
             border-color: #4CAF50;
@@ -111,7 +111,7 @@
     }
 }
 .btn-tocart{
-    text-transform: none;
+    text-transform: uppercase;
 }
 .cdz-amp-reviews-list{
     .cdz-amp-item{
@@ -177,7 +177,7 @@
     &:after{content: ')';}
 }
 .cdz-data-section.additional{
-
+    
 }
 table.additional-attributes{
     width: 100%;
