--- a/pub/media/codazon/amp/less/partials/_listing.less
+++ b/pub/media/codazon/amp/less/partials/_listing.less
@@ -72,7 +72,7 @@
         max-width: none;
         box-sizing: border-box;
         .cdz-list-inner{
-
+            
         }
     }
     > [class*="carousel-content"] {
@@ -134,7 +134,7 @@
         }
     }
     .btn-primary{
-        text-transform: none;
+        text-transform: uppercase;
         display: inline-block;
         padding: 3px 15px;
         font-size: 12px;
