--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -19,6 +19,10 @@
     //
     //    Category view
     //--------------------------------------
+    .sorter-label {
+        font-size: 14px;
+    }
+
     .old-price,
     .old.price {
         //.lib-css(color, @text__color__muted);
