--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/_layout.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/_layout.less
@@ -71,6 +71,10 @@
         padding-left: 16px;
         padding-right: 16px;
     }
+    .catalog-category-view .products-grid {
+        padding-left: 8px;
+        padding-right: 8px;
+    }
     .header.content {
         padding-left: 18px;
         padding-right: 18px;
