--- a/app/code/Codazon/AjaxLayeredNavPro/view/frontend/templates/config.phtml
+++ b/app/code/Codazon/AjaxLayeredNavPro/view/frontend/templates/config.phtml
@@ -21,8 +21,29 @@ $boxMaxHeight = (int)$helper->getConfig('codazon_ajaxlayerednavpro/general/box_m
 <?php if ($boxMaxHeight) : ?>
 <style type="text/css">
 @media(min-width: 768px) {
-.filter-options-content-inner{max-height: <?= $boxMaxHeight ?>px; overflow-y: auto;}
-.filter-options-content-inner .swatch-attribute-options{margin: 0 0 0 0;}
+    .filter-options-content-inner {
+        max-height: <?= $boxMaxHeight ?>px;
+        overflow-y: auto;
+    }
+    .filter-options-content-inner::-webkit-scrollbar{
+        width: 4px;
+        height: 4px;
+    }
+    .filter-options-content-inner::-webkit-scrollbar-track{
+        background: none;
+        border-radius: 4px;
+    }
+    .filter-options-content-inner::-webkit-scrollbar-thumb{
+        background: rgba(51, 51, 51, 0.5);
+        border-radius: 4px;
+    }
+    .filter-options-content-inner::-webkit-scrollbar-thumb:hover{
+        background: #888;
+    }
+    .filter-options-content-inner::-webkit-scrollbar-corner{
+        background: #179a16;
+    }
+    .filter-options-content-inner .swatch-attribute-options{margin: 0 0 0 0;}
 }
 </style>
 <?php endif ?>
