--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Newsletter/templates/subscribe.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Newsletter/templates/subscribe.phtml
@@ -22,7 +22,7 @@
                 <label class="label" for="newsletter"><span><?= $block->escapeHtml(__('Sign Up for Our Newsletter:')) ?></span></label>
                 <div class="control">
                     <input name="email" type="email" id="newsletter"
-                           placeholder="<?= $block->escapeHtml(__('Enter your email address')) ?>"
+                           placeholder="<?= $block->escapeHtml(__('Enter email address')) ?>"
                            data-mage-init='{"mage/trim-input":{}}'
                            data-validate="{required:true, 'validate-email':true}"/>
                 </div>
