--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/web/css/source/module/_collapsible_navigation.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/web/css/source/module/_collapsible_navigation.less
@@ -87,6 +87,17 @@
     }
 }
 
+    .sidebar-main {
+        #layered-filter-block {
+            .block-title {
+                strong {
+                    font-family: 'roboto' !important;
+                    line-height: 16px !important;
+                }
+            }
+        }
+    }
+
 }
 
 //
