--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -72,6 +72,12 @@
         }
     }
 
+    .product-list-container {
+        .toolbar {
+            box-shadow: none;
+        }
+    }
+
     .sorter {
         float: right;
 		.rtl-layout &{
