--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -86,7 +86,7 @@
         .page-products & {
             padding-right: 15px;
             right: @indent__s;
-            top: 16px;
+            top: 8px;
             z-index: 1;
             font-size: 14px;
             position: absolute;
@@ -285,5 +285,11 @@
         padding: 7px 0;
         margin-bottom: 0;
         box-shadow: none;
+    }
+    .catalog-category-view .toolbar {
+        padding: 0;
+    }
+    .catalogsearch-result-index .toolbar {
+        padding: 0;
     }
 }
