--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
@@ -359,7 +359,7 @@
     .filter .filter-current {
         border: solid @border-color__base;
         border-width: 1px 0;
-        margin: @indent__xs 0 @indent__s;
+        margin: 0 0 @indent__s;
 
         .items {
             display: none;
@@ -723,7 +723,7 @@
 				left: 5px;
 				position: absolute;
 				text-align: center;
-				top: -40px;
+				top: -36px;
 				z-index: 2;
 				display:inline-block;
 				//border:@_btnline solid @btn_primary_border !important;
@@ -774,6 +774,6 @@
         display: none;
     }
 	.page-products .page-main .columns{
-		padding-top: 60px;
+		padding-top: 48px;
 	}
 }
