--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
@@ -348,7 +348,7 @@
     }
 
     .product-item-link {
-        font-size: 14px !important;
+        font-size: 16px !important;
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
@@ -362,6 +362,7 @@
         .price-box {
             margin: unset;
             padding: 8px 0 0;
+            font-size: 16px;
             .price-label {
                 display: none;
             }
