--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/_layout.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/_layout.less
@@ -75,6 +75,10 @@
         padding-left: 8px;
         padding-right: 8px;
     }
+    .catalogsearch-result-index .products-grid {
+        padding-left: 8px;
+        padding-right: 8px;
+    }
     .header.content {
         padding-left: 18px;
         padding-right: 18px;
