--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
@@ -300,6 +300,7 @@
 			//margin: 0 90px 10px 50px;
 			//margin: 0 0 10px;
 			min-height: 32px;
+            margin-bottom: 2px;
 			.small-logo{
                 display:inline-block;
                 vertical-align:top;
@@ -579,7 +580,7 @@
 
         //search
         .header-wrapper-middle{
-            padding: 0 15px 15px;
+            padding: 0 15px 12px;
         }
         .mobile-search-wrapper{
             .block-search .control{
@@ -741,7 +742,7 @@
 
 		//search
 			.header-wrapper-middle{
-			padding: 0 15px 15px;
+			padding: 0 15px 12px;
 		}
 		.mobile-search-wrapper{
 			.block-search .control{
