--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
@@ -1336,7 +1336,7 @@
 }
 .product-info-main .product-info-price{
     margin: 0;
-    margin-bottom: 12px !important;
+    margin-bottom: 20px !important;
 }
 .product-options-bottom .price-box .price-container .price, .product-info-price .price-box .price-container .price {
     font-style: normal;
@@ -1427,7 +1427,7 @@
     border: 1px solid #E1E1E1;
     padding: 12px 14px;
     border-right: none;
-    color: #999999;
+    color: #E1E1E1;
     border-radius: 4px 0 0 4px;
 }
 .custom-style-qty-plus{
